--- a/custom/plugins/Chat/src/Resources/views/storefront/page/index.html.twig
+++ b/custom/plugins/Chat/src/Resources/views/storefront/page/index.html.twig
@@ -10,7 +10,7 @@
 						{% for chat in chats %}
 							<li class="chat-list-item {% if currentChat is defined and currentchat.chatId == chat.chatId %}active{% endif %}">
 								<a href="{{ path('chat.controller.chat', { 'chatId': chat.chatId })}}" data-chatid="{% chat.chatId %}" data-token="{% chat.token %}">
-									{{ chat.username }}
+									{{ chat.username | sanitize }}
 								</a>
 							</li>
 						{% endfor %}
@@ -20,7 +20,7 @@
 			<div class="col-md-8">
 				<div class="chat-box">
 					{% if currentChat is defined %}
-						<h2>{{ currentchat.username }}</h2>
+						<h2>{{ currentchat.username | sanitize }}</h2>
 						<div id="chat-messages" class="overflow-auto h-100"></div>
 						<form class="chat-form" action="#">
 							<input type="text" name="message" placeholder="Type your message..." id="chat-input">
