--- a/custom/plugins/Chat/src/Resources/views/storefront/page/chat.html.twig
+++ b/custom/plugins/Chat/src/Resources/views/storefront/page/chat.html.twig
@@ -1,7 +1,7 @@
-{% sw_extends '@Storefront/storefront/layout/base.html.twig' %}
+{% sw_extends '@Storefront/storefront/base.html.twig' %}
 
 {% block content %}
-	<div class="container" id="chat" data-userid="{% userId %}">
+	<div class="container" id="chat" data-userid="{{ userId }}">
 		<div class="row">
 			<div class="col-md-4">
 				<div class="chat-list">
@@ -9,8 +9,8 @@
 					<ul class="chat-list-items">
 						{% for chat in chats %}
 							<li class="chat-list-item {% if currentChat is defined and currentchat.chatId == chat.chatId %}active{% endif %}">
-								<a href="{{ path('chat.controller.chat', { 'chatId': chat.chatId })}}" data-chatid="{% chat.chatId %}" data-token="{% chat.token %}">
-									{{ chat.username | sanitize }}
+								<a href="{{ path('chat.controller.chat', { 'chatId': chat.chatId })}}" data-chatid="{{ chat.chatId }}" data-token="{{ chat.token }}">
+									{{ chat.username | sw_sanitize }}
 								</a>
 							</li>
 						{% endfor %}
@@ -20,7 +20,7 @@
 			<div class="col-md-8">
 				<div class="chat-box">
 					{% if currentChat is defined %}
-						<h2>{{ currentchat.username | sanitize }}</h2>
+						<h2>{{ currentchat.username | sw_sanitize }}</h2>
 						<div id="chat-messages" class="overflow-auto h-100"></div>
 						<form class="chat-form" action="#">
 							<input type="text" name="message" placeholder="Type your message..." id="chat-input">
